crates/rome_formatter/tests/specs/prettier/template-literals/css-prop.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 121
expression: css-prop.js

---
# Input
```js
function SomeComponent (props) {
  // Create styles as if you're calling css and the class will be applied to the component
  return (<div css={`
    color: blue;
    font-size: 17 px;

    &:hover {
      color: green;
    }

    & .some-class {
      font-size: 20px;
    }
  `}>
    This will be blue until hovered.
    <div className="some-class">
      This font size will be 20px
    </div>
  </div>)
}

const TestComponent = ({ children, ...props }) => (
  <div css={`color: white; background: black`}>
    {children}
  </div>
);

```

# Output
```js
function SomeComponent(props) {
  // Create styles as if you're calling css and the class will be applied to the component
  return (<div css={`
    color: blue;
    font-size: 17 px;

    &:hover {
      color: green;
    }

    & .some-class {
      font-size: 20px;
    }
  `}>
    This
  will;
  be;
  blue;
  until;
  hovered.
    <div
  className = "some-class" > This;
  font;
  size;
  will;
  be;
  20px
    </div>
  </div>)
}

const TestComponent = ({ children, ...props }) => (
  <div css={`color: white; background: black`}>
    {children}
  </div>
);

```

# Errors
```
error: numbers cannot be followed by identifiers directly after
   ┌─ css-prop.js:17:32
   │
17 │       This font size will be 20px
   │                                ^^ an identifier cannot appear here

error[SyntaxError]: Invalid assignment to `<div css`
  ┌─ css-prop.js:3:11
  │
3 │   return (<div css={`
  │           ^^^^^^^^ This expression cannot be assigned to

error[SyntaxError]: expected a property, a shorthand property, a getter, a setter, or a method but instead found '`
    color: blue;
    font-size: 17 px;

    &:hover {
      color: green;
    }

    & .some-class {
      font-size: 20px;
    }
  `'
   ┌─ css-prop.js:3:21
   │  
 3 │     return (<div css={`
   │ ┌─────────────────────^
 4 │ │     color: blue;
 5 │ │     font-size: 17 px;
 6 │ │ 
   · │
13 │ │     }
14 │ │   `}>
   │ └───^ Expected a property, a shorthand property, a getter, a setter, or a method here

error[SyntaxError]: expected `')'` but instead found `will`
   ┌─ css-prop.js:15:10
   │
15 │     This will be blue until hovered.
   │          ^^^^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ css-prop.js:15:15
   │
15 │     This will be blue until hovered.
   │          -----^^
   │          │    │
   │          │    An explicit or implicit semicolon is expected here...
   │          ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ css-prop.js:15:18
   │
15 │     This will be blue until hovered.
   │               ---^^^^
   │               │  │
   │               │  An explicit or implicit semicolon is expected here...
   │               ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ css-prop.js:15:23
   │
15 │     This will be blue until hovered.
   │                  -----^^^^^
   │                  │    │
   │                  │    An explicit or implicit semicolon is expected here...
   │                  ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ css-prop.js:15:29
   │
15 │     This will be blue until hovered.
   │                       ------^^^^^^^
   │                       │     │
   │                       │     An explicit or implicit semicolon is expected here...
   │                       ...Which is required to end this statement

error[SyntaxError]: expected an identifier but instead found '<'
   ┌─ css-prop.js:16:5
   │
16 │     <div className="some-class">
   │     ^ Expected an identifier here

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ css-prop.js:16:10
   │  
15 │       This will be blue until hovered.
   │ ┌─────────────────────────────'
16 │ │     <div className="some-class">
   │ │          ^^^^^^^^^ An explicit or implicit semicolon is expected here...
   │ └──────────────────' ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ css-prop.js:17:12
   │  
16 │       <div className="some-class">
   │ ┌──────────'
17 │ │       This font size will be 20px
   │ │            ^^^^ An explicit or implicit semicolon is expected here...
   │ └───────────────' ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ css-prop.js:17:17
   │
17 │       This font size will be 20px
   │            -----^^^^
   │            │    │
   │            │    An explicit or implicit semicolon is expected here...
   │            ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ css-prop.js:17:22
   │
17 │       This font size will be 20px
   │                 -----^^^^
   │                 │    │
   │                 │    An explicit or implicit semicolon is expected here...
   │                 ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ css-prop.js:17:27
   │
17 │       This font size will be 20px
   │                      -----^^
   │                      │    │
   │                      │    An explicit or implicit semicolon is expected here...
   │                      ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ css-prop.js:17:30
   │
17 │       This font size will be 20px
   │                           ---^^^^
   │                           │  │
   │                           │  An explicit or implicit semicolon is expected here...
   │                           ...Which is required to end this statement

error[SyntaxError]: Invalid assignment to `<div css`
   ┌─ css-prop.js:23:3
   │
23 │   <div css={`color: white; background: black`}>
   │   ^^^^^^^^ This expression cannot be assigned to

error[SyntaxError]: expected a property, a shorthand property, a getter, a setter, or a method but instead found '`color: white; background: black`'
   ┌─ css-prop.js:23:13
   │
23 │   <div css={`color: white; background: black`}>
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected a property, a shorthand property, a getter, a setter, or a method here

error[SyntaxError]: Expected an expression for the right hand side of a `<`, but found an operator instead
   ┌─ css-prop.js:25:4
   │
25 │   </div>
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ css-prop.js:26:1
   │
26 │ );
   │ ^ Expected an expression here


```


